--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Bspgeojson by RyanMullins</title>
+    <title>BspGeoJSON by RyanMullins</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Bspgeojson</h1>
-        <p>Creates a bivariate scatter plot from a GeoJSON Feature Collection</p>
+        <p>A D3 plugin or creating Bivariate Scatter Plots from GeoJSON Feature Collections.</p>
 
         <p class="view"><a href="https://github.com/RyanMullins/bspGeoJson">View the Project on GitHub <small>RyanMullins/bspGeoJson</small></a></p>
 
