--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Bspgeojson</h1>
+        <h1>BspGeoJSON</h1>
         <p>A D3 plugin or creating Bivariate Scatter Plots from GeoJSON Feature Collections.</p>
 
         <p class="view"><a href="https://github.com/RyanMullins/bspGeoJson">View the Project on GitHub <small>RyanMullins/bspGeoJson</small></a></p>
